<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_direccion_ws"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10px"
            android:text="@string/txt_direccion_servicio"
            android:textSize="16dp"
            android:textColor="@color/colorAccent"/>

        <EditText
            android:id="@+id/ed_direccion_ws"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10px"
            android:hint="@string/hint_direccion_ws" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_guardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20px"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:text="@string/guardar" />

    </LinearLayout>
</LinearLayout>