<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/titulo_clientes"
                android:textColor="@color/colorPrimary"
                android:textSize="18dp" />

            <Spinner
                android:id="@+id/spn_clientes"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:textAlignment="center" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/txt_direccion"
                android:textColor="@color/colorPrimary"
                android:textSize="18dp" />

            <Spinner
                android:id="@+id/spn_domicilios"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:textAlignment="center" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/titulo_tipo_visitas"
                android:textColor="@color/colorPrimary"
                android:textSize="18dp" />

            <Spinner
                android:id="@+id/spn_tipos_visitas"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:textAlignment="center" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorAccent" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_save_novedad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:text="@string/txt_grabar_novedad" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:text="@string/txt_crear_visita" />

</LinearLayout>