<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_direccion_ws"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/txt_remitos_cobranza_guardados"
            android:textColor="@color/colorAccent"
            android:textSize="18dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/txt_remitos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/txt_remitos_guardados"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/txt_cantidad_remito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:textSize="14dp"
                android:text="0"
                android:textColor="@color/colorRed"/>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/txt_cobranzas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/txt_cobranza_guardados"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/txt_cantidad_cobranza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:textSize="14dp"
                android:text="0"
                android:textColor="@color/colorRed"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_guardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20px"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:text="@string/enviar" />

    </LinearLayout>

</LinearLayout>