<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:paddingBottom="30dp">

            <EditText
                android:id="@+id/edUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_margin="10px"
                android:hint="usuario" />

            <EditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_margin="10px"
                android:hint="Contraseña"
                android:inputType="textPassword" />

            <CheckBox
                android:id="@+id/cb_recordar_contrasenia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:text="@string/txt_recordar_usuario" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20px"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorWhite"
                android:text="@string/login" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>